--- a/strv_app_implemented/ios/Runner/Info.plist
+++ b/strv_app_implemented/ios/Runner/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>strv_app_implemented</string>
+	<string>STRV-XKCD</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
