--- a/strv_app_implemented/pubspec.yaml
+++ b/strv_app_implemented/pubspec.yaml
@@ -6,10 +6,53 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  # Core
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  flutter_bloc: ^6.1.1
 
+  equatable: ^1.2.5
+  shimmer: ^1.1.2
+  flutter_svg: ^0.19.1
+  infinite_scroll_pagination: ^2.3.0
+  shared_preferences: ^0.5.12+4
+  fimber: ^0.4.4
+
+  # Dependency Injection
+  injectable: ^1.0.7
+  get_it: ^5.0.6
+
+  # Network Packages
+  http: ^0.12.2
+  http_interceptor: ^0.3.3
+  provider: ^4.3.3
+
+  # Image handling
+  cached_network_image: ^2.5.0
+  photo_view: ^0.10.3
+
+  # General build dependency
+  # To change launcher icon
+  flutter_launcher_icons: ^0.8.1
+  
+  # To change launcher name
+  flutter_launcher_name: ^0.0.1
+
+  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+
+dev_dependencies:
+  build_runner: ^1.11.0
+  injectable_generator: ^1.0.7
+  gen_lang: ^0.1.3
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/images/app.png
+
+flutter_launcher_name:
+  name: "STRV-XKCD"
