--- a/strv_app_implemented/android/app/src/main/AndroidManifest.xml
+++ b/strv_app_implemented/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="STRV-XKCD"
+        android:label="S-XKCD"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
