--- a/strv_app_implemented/pubspec.yaml
+++ b/strv_app_implemented/pubspec.yaml
@@ -15,7 +15,6 @@ dependencies:
 
   equatable: ^1.2.5
   shimmer: ^1.1.2
-  flutter_svg: ^0.19.1
   infinite_scroll_pagination: ^2.3.0
   shared_preferences: ^0.5.12+4
   fimber: ^0.4.4
@@ -48,10 +47,10 @@ dependencies:
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
-  hive_generator: ^0.8.2
   build_runner: ^1.11.0
-  injectable_generator: ^1.0.7
   gen_lang: ^0.1.3
+  injectable_generator: ^1.0.7
+  hive_generator: ^0.8.2
 
 flutter:
   uses-material-design: true
@@ -60,4 +59,11 @@ flutter:
     - assets/images/app.png
 
 flutter_launcher_name:
-  name: "STRV-XKCD"
+  name: "S-XKCD"
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/app.png"
+  adaptive_icon_background: "#111517"
+  adaptive_icon_foreground: "assets/images/app_icon_foreground.png"
