--- a/strv_app_workshop/pubspec.yaml
+++ b/strv_app_workshop/pubspec.yaml
@@ -6,52 +6,52 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  # Core
+  ### Core
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  flutter_bloc: ^6.1.1
+  # flutter_bloc: ^6.1.1
 
-  equatable: ^1.2.5
-  shimmer: ^1.1.2
-  flutter_svg: ^0.19.1
-  infinite_scroll_pagination: ^2.3.0
-  shared_preferences: ^0.5.12+4
-  fimber: ^0.4.4
+  # equatable: ^1.2.5
+  # shimmer: ^1.1.2
+  # infinite_scroll_pagination: ^2.3.0
+  # shared_preferences: ^0.5.12+4
+  # fimber: ^0.4.4
 
-  # Database
-  hive: ^1.4.4+1
-  hive_flutter: ^0.3.1
+  ### Database
+  # hive: ^1.4.4+1
+  # hive_flutter: ^0.3.1
 
-  # Dependency Injection
-  injectable: ^1.0.7
-  get_it: ^5.0.6
+  ### Dependency Injection
+  # injectable: ^1.0.7
+  # get_it: ^5.0.6
 
-  # Network Packages
-  http: ^0.12.2
-  http_interceptor: ^0.3.3
-  provider: ^4.3.3
+  ### Network Packages
+  # http: ^0.12.2
+  # http_interceptor: ^0.3.3
+  # provider: ^4.3.3
 
-  # Image handling
-  cached_network_image: ^2.5.0
-  photo_view: ^0.10.3
+  ### Image handling
+  # cached_network_image: ^2.5.0
+  # photo_view: ^0.10.3
 
-  # General build dependency
-  # To change launcher icon
-  flutter_launcher_icons: ^0.8.1
+  ### General build dependency
+  ### To change launcher icon
+  # flutter_launcher_icons: ^0.8.1
   
-  # To change launcher name
-  flutter_launcher_name: ^0.0.1
+  ### To change launcher name
+  # flutter_launcher_name: ^0.0.1
 
-  # Use with the CupertinoIcons class for iOS style icons.
+  ### Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
 
-dev_dependencies:
-  hive_generator: ^0.8.2
-  build_runner: ^1.11.0
-  injectable_generator: ^1.0.7
-  gen_lang: ^0.1.3
+
+# dev_dependencies:
+#   build_runner: ^1.11.0
+#   gen_lang: ^0.1.3
+#   injectable_generator: ^1.0.7
+#   hive_generator: ^0.8.2
 
 flutter:
   uses-material-design: true
@@ -59,5 +59,12 @@ flutter:
   # assets:
   #   - assets/images/app.png
 
-flutter_launcher_name:
-  name: "STRV-XKCD"
+# flutter_launcher_name:
+#   name: "S-XKCD"
+
+# flutter_icons:
+#   android: true
+#   ios: true
+#   image_path: "assets/images/app.png"
+#   adaptive_icon_background: "#111517"
+#   adaptive_icon_foreground: "assets/images/app_icon_foreground.png"
