--- a/strv_app_workshop/pubspec.yaml
+++ b/strv_app_workshop/pubspec.yaml
@@ -3,46 +3,43 @@ description: STRV workshop application
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   # Core
   flutter:
     sdk: flutter
 
-  fimber: ^0.4.4
+  fimber: 0.6.1
 
   # Bloc Architecture
-  flutter_bloc: ^6.1.1
-  equatable: ^1.2.5
+  flutter_bloc: 7.0.0
+  equatable: 2.0.0
 
   # Network Packages
-  http: ^0.12.2
-  http_interceptor: ^0.3.3
-  provider: ^4.3.3
+  http: 0.13.2
+  http_interceptor: 0.4.1
+  # provider: ^4.3.3
 
   # Image handling
-  cached_network_image: ^2.5.0
-  photo_view: ^0.10.3
-
-  # General build dependency
-  # To change launcher icon
-  flutter_launcher_icons: ^0.8.1
-
-  # To change launcher name
-  flutter_launcher_name: ^0.0.1
+  cached_network_image: 3.0.0
+  photo_view: 0.11.1
 
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
+  cupertino_icons: 1.0.2
+
+
+### Dev Dependencies
+dev_dependencies:
+  rename: 1.3.1
+  flutter_launcher_icons: 0.9.0
+  flutter_native_splash: 1.1.8+4
 
 flutter:
   uses-material-design: true
 
   assets:
-    - assets/images/app.png
-
-flutter_launcher_name:
-  name: "S-XKCD"
+    - assets/images/
 
 flutter_icons:
   android: true
@@ -50,3 +47,15 @@ flutter_icons:
   image_path: "assets/images/app.png"
   adaptive_icon_background: "#111517"
   adaptive_icon_foreground: "assets/images/app_icon_foreground.png"
+
+flutter_native_splash:
+  color: "#111517"
+  image: assets/images/app_icon_foreground.png
+
+  web: false # Dissable generation for web
+  android_gravity: center
+  ios_content_mode: center
+  fullscreen: true
+  
+  info_plist_files:
+    - 'ios/Runner/Info.plist'
